[package]
name = "yunxi-webdisk"
version = "1.0.1"
edition = "2021"
authors = ["唐溪"]  # 修改为数组格式
description = "@云溪起源 制作的简易网盘程序"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
actix-web = { version = "4.4", features = ["compress-brotli", "compress-gzip"] }
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }  # 减少特性
tokio = { version = "1.0", features = ["fs", "rt-multi-thread"], default-features = false }  # 减少特性
futures = { version = "0.3", default-features = false }  # 减少特性
parking_lot = "0.12"
num_cpus = "1.0"
percent-encoding = "2.3"
tokio-stream = { version = "0.1", features = ["fs"] }

[profile.release.package."*"]
opt-level = "z"
debug = false
strip = true