[package]
name = "webdisk"
version = "1.0.6"
edition = "2021"
authors = ["唐溪"]
description = "@云溪起源 制作的简易网盘程序"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
incremental = false

[dependencies]
actix-web = { version = "4.4", default-features = false, features = ["macros", "compress-gzip"] }
actix-files = { version = "0.6", default-features = false }
tera = { version = "1.19", default-features = false, features = ["builtins"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_yaml = { version = "0.9", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "fs"] }
num_cpus = "1.0"
percent-encoding = "2.3"
libc = { version = "0.2", default-features = false }
socket2 = { version = "0.5", default-features = false }
dav-server = "0.5.7"
base64 = "0.21.5"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi"] }

[profile.release.package."*"]
opt-level = "z"
debug = false
strip = true
